--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
     "webpack": "^1.13.2"
   },
   "dependencies": {
-    "d3": "4.10.0"
+    "d3": "4.10.0",
+    "jquery": "3.2.1",
+    "jquery.localscroll": "1.4.0",
+    "jquery.scrollto": "2.1.2"
   }
 }
