--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "d3": "4.10.0",
     "jquery": "3.2.1",
     "jquery.localscroll": "1.4.0",
-    "jquery.scrollto": "2.1.2"
+    "jquery.scrollto": "2.1.2",
+    "mathjs": "3.15.0"
   }
 }
