--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "js/main.js",
   "scripts": {
     "watch": "webpack -w",
-    "start": "live-server --port=9003 --host=0.0.0.0we--watch=./main.bundle.js"
+    "start": "live-server --port=9003 --host=0.0.0.0 --watch=./main.bundle.js"
   },
   "author": "Nick Strayer",
   "license": "MIT",
@@ -23,6 +23,6 @@
     "jquery": "3.2.1",
     "jquery.localscroll": "1.4.0",
     "jquery.scrollto": "2.1.2",
-    "mathjs": "3.15.0"
+    "mathjs": "3.17.0"
   }
 }
