Updated shinysense entry to reflect that vision is now included.

--- a/projects.json
+++ b/projects.json
@@ -11,7 +11,7 @@
 		"link": "https://github.com/nstrayer/shinysense",
 		"photo": "images/projectPics/shinysense.gif",
 		"descriptions": ["A set of shiny modules for letting shiny sense the world around it. ",
-			"Currently has touch, sound, and motion with vision coming soon.",
+			"Currently has touch, sound, motion, and vision 'senses.'",
 			"Bundled into an R package."
 		],
 		"github": "https://github.com/nstrayer/shinysense/"
