--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "csv-parse": "^5.6.0",
     "gl-matrix": "^3.4.3",
     "lucide-react": "^0.510.0",
+    "marked": "^15.0.11",
     "postcss": "^8.5.3",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
