--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@iconify-json/line-md": "^1.2.8",
     "@iconify-json/mdi": "^1.2.2",
     "@iconify-json/ri": "^1.2.5",
+    "@radix-ui/react-navigation-menu": "^1.2.12",
     "@radix-ui/react-slot": "^1.2.2",
     "@tailwindcss/vite": "^4.1.6",
     "@types/react": "^19.1.4",
